* Added NL-Bayes denoising algorithm with optional boosters DA3D, SOS and Anscombe VST
* Added undershoot clamping to bicubic and lanczos4 interpolation methods
* Added CFA merge process for reconstructing a Bayer pattern previously split out with extraction
* Added binning and binxy command
* Added rejection maps creation on rejection stacking
* Allowed area selection (and much more) to be done on RGB display tab
* Updated scripts to specify cosmetic correction is from masterdark with -cc=dark option
* Updated seq file version to v4. Registration block keeps homography information
* Updated behaviour of channel select toggles in histogram and hyperbolic stretch tools, allowing stretching only selected channels
* Replaced Libraw with RT debayering
* Replaced generalized hyperbolic transform stretch method by more general algorithms and optimised for speed
* Optimised asinh code for speed
* Improved Ha-OIII extraction to offer full resolution O-III output and improve star roundness
* Refactored global registration and added 2pass and Apply Existing methods
* Refactored 3-star registration to run the 3 stars analysis successively
* Refactored 1- and 2/3-stars registration into one single registration method
* Refactored PCC, using WCS information to identify stars instead of registration match
* Refactored settings, preferences and configuration file, adding get and set commands
* Refactored commands error handling
* Refactored light curve creation, filtering the reference stars to valid only
* Refactored PSF fitting to solve for the angle in all cases
* Fixed comet registration when registration was accumulated over existing data
* Fixed star detection for images with very large stars
* Fixed cancellation of seqpsf or seqcrop
* Fixed photometry analysis of stars with negative pixels around them
* Fixed dates keywords in sum and min/max algorithms
* Fixed FITS header preservation on RGB composition